--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ main {
      align-items: center; 
      justify-content: right; 
      padding-left: 25px; 
-     background-image: url("images/gallery/Itlay_2.webp"); 
+     background-image: url("images/Cover_Image.png"); 
      background-position: center; 
      background-size: center; 
      width: 100%;
